Changed opening phrases in song load screen

--- a/data/themes/MegaLight V4/theme.ini
+++ b/data/themes/MegaLight V4/theme.ini
@@ -1,7 +1,7 @@
 [theme]
 
 # Loading phrases
-loading_phrase = MegaLight has always been the Standard theme for FoFiX._FoFiX v4.0 brings the level of customizability to a whole new level never seen before in Frets On Fire._What do you mean "where's Jurgen?"  You're crazy._If you find yourself getting bored, feel free to stand up while you play instead of continuing to jam on your couch._Let's get this show on the Road!_Impress the Crowd!_Don't forget to strum!_Rock the house!_Jurgen is watching.
+loading_phrase = BetterWithBCI!_FoFiX_BCI v1.1 brings the level of customizability to a whole new level never seen before in Frets On Fire._What do you mean "where's Jurgen?"  You're crazy._If you find yourself getting bored, feel free to sing along!_Let's get this show on the Road!_Impress the Crowd!_Don't forget to use the force!_Rock the lab!_Rob is watching._Rock n' Roll with RobbieG's SuperSensoryBCIBand
 results_phrase =
 
 # background_color defines what color openGL will clear to
